@@ -39,6 +39,8 @@ import io.harness.CvNextGenTestBase;
 import io.harness.ModuleType;
 import io.harness.beans.FeatureName;
 import io.harness.category.element.UnitTests;
+import io.harness.connector.ConnectorInfoDTO;
+import io.harness.connector.ConnectorResponseDTO;
 import io.harness.cvng.BuilderFactory;
 import io.harness.cvng.CVNGTestConstants;
 import io.harness.cvng.activity.entities.Activity;
@@ -49,7 +51,9 @@ import io.harness.cvng.beans.DataSourceType;
 import io.harness.cvng.beans.MonitoredServiceDataSourceType;
 import io.harness.cvng.beans.MonitoredServiceType;
 import io.harness.cvng.beans.TimeSeriesMetricType;
+import io.harness.cvng.beans.change.ChangeCategory;
 import io.harness.cvng.beans.change.ChangeSourceType;
+import io.harness.cvng.beans.change.ChangeSummaryDTO;
 import io.harness.cvng.beans.cvnglog.CVNGLogDTO;
 import io.harness.cvng.beans.cvnglog.CVNGLogTag;
 import io.harness.cvng.beans.cvnglog.CVNGLogTag.TagType;
@@ -58,13 +62,14 @@ import io.harness.cvng.beans.cvnglog.ExecutionLogDTO;
 import io.harness.cvng.beans.cvnglog.ExecutionLogDTO.LogLevel;
 import io.harness.cvng.beans.cvnglog.TraceableType;
 import io.harness.cvng.client.FakeNotificationClient;
+import io.harness.cvng.client.NextGenService;
+import io.harness.cvng.client.NextGenServiceImpl;
 import io.harness.cvng.core.beans.HealthMonitoringFlagResponse;
 import io.harness.cvng.core.beans.HealthSourceMetricDefinition.AnalysisDTO;
 import io.harness.cvng.core.beans.HealthSourceMetricDefinition.AnalysisDTO.DeploymentVerificationDTO;
 import io.harness.cvng.core.beans.HealthSourceMetricDefinition.AnalysisDTO.LiveMonitoringDTO;
 import io.harness.cvng.core.beans.HealthSourceMetricDefinition.SLIDTO;
 import io.harness.cvng.core.beans.RiskProfile;
-import io.harness.cvng.core.beans.change.ChangeSummaryDTO;
 import io.harness.cvng.core.beans.monitoredService.ChangeSourceDTO;
 import io.harness.cvng.core.beans.monitoredService.CountServiceDTO;
 import io.harness.cvng.core.beans.monitoredService.HealthScoreDTO;
@@ -76,6 +81,7 @@ import io.harness.cvng.core.beans.monitoredService.MonitoredServiceDTO.Monitored
 import io.harness.cvng.core.beans.monitoredService.MonitoredServiceDTO.ServiceDependencyDTO;
 import io.harness.cvng.core.beans.monitoredService.MonitoredServiceDTO.Sources;
 import io.harness.cvng.core.beans.monitoredService.MonitoredServiceListItemDTO;
+import io.harness.cvng.core.beans.monitoredService.MonitoredServicePlatformResponse;
 import io.harness.cvng.core.beans.monitoredService.MonitoredServiceResponse;
 import io.harness.cvng.core.beans.monitoredService.MonitoredServiceWithHealthSources;
 import io.harness.cvng.core.beans.monitoredService.RiskData;
@@ -105,6 +111,7 @@ import io.harness.cvng.core.services.api.FeatureFlagService;
 import io.harness.cvng.core.services.api.MetricPackService;
 import io.harness.cvng.core.services.api.SetupUsageEventService;
 import io.harness.cvng.core.services.api.VerificationTaskService;
+import io.harness.cvng.core.services.api.WebhookConfigService;
 import io.harness.cvng.core.services.api.monitoredService.ChangeSourceService;
 import io.harness.cvng.core.services.api.monitoredService.HealthSourceService;
 import io.harness.cvng.core.services.api.monitoredService.MonitoredServiceService;
@@ -120,7 +127,6 @@ import io.harness.cvng.events.monitoredservice.MonitoredServiceToggleEvent;
 import io.harness.cvng.events.monitoredservice.MonitoredServiceUpdateEvent;
 import io.harness.cvng.models.VerificationType;
 import io.harness.cvng.notification.beans.ChangeObservedConditionSpec;
-import io.harness.cvng.notification.beans.MonitoredServiceChangeEventType;
 import io.harness.cvng.notification.beans.NotificationRuleCondition;
 import io.harness.cvng.notification.beans.NotificationRuleConditionType;
 import io.harness.cvng.notification.beans.NotificationRuleDTO;
@@ -150,6 +156,7 @@ import io.harness.lock.PersistentLocker;
 import io.harness.ng.beans.PageResponse;
 import io.harness.ng.core.dto.ResponseDTO;
 import io.harness.ng.core.environment.dto.EnvironmentResponse;
+import io.harness.ng.core.environment.dto.EnvironmentResponseDTO;
 import io.harness.ng.core.mapper.TagMapper;
 import io.harness.notification.notificationclient.NotificationResultWithoutStatus;
 import io.harness.outbox.OutboxEvent;
@@ -179,6 +186,7 @@ import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
+import javax.ws.rs.BadRequestException;
 import lombok.AccessLevel;
 import lombok.SneakyThrows;
 import lombok.experimental.FieldDefaults;
@@ -216,6 +224,8 @@ public class MonitoredServiceServiceImplTest extends CvNextGenTestBase {
   @Mock private PersistentLocker mockedPersistentLocker;
   @Mock private EnforcementClientService enforcementClientService;
   @Mock private FeatureFlagService featureFlagService;
+
+  @Mock private WebhookConfigService webhookConfigService;
 
   @Mock private NgLicenseHttpClient ngLicenseHttpClient;
 
@@ -279,6 +289,8 @@ public class MonitoredServiceServiceImplTest extends CvNextGenTestBase {
                         .projectIdentifier(projectIdentifier)
                         .build();
     environmentParams = builderFactory.getContext().getServiceEnvironmentParams();
+
+    when(webhookConfigService.getWebhookApiBaseUrl()).thenReturn("http://localhost:6457/cv/api/");
 
     FieldUtils.writeField(monitoredServiceService, "setupUsageEventService", setupUsageEventService, true);
     FieldUtils.writeField(changeSourceService, "changeSourceUpdateHandlerMap", changeSourceUpdateHandlerMap, true);
@@ -768,6 +780,161 @@ public class MonitoredServiceServiceImplTest extends CvNextGenTestBase {
   }
 
   @Test
+  @Owner(developers = ARPITJ)
+  @Category(UnitTests.class)
+  public void testCreate_invalidServiceRef() throws IllegalAccessException {
+    NextGenService nextGenService = Mockito.mock(NextGenService.class);
+    FieldUtils.writeField(monitoredServiceService, "nextGenService", nextGenService, true);
+    when(nextGenService.getService(any(), any(), any(), any())).thenThrow(new BadRequestException("Service Invalid"));
+    when(featureFlagService.isFeatureFlagEnabled(any(), any())).thenReturn(true);
+    MonitoredServiceDTO monitoredServiceDTO = createMonitoredServiceDTO();
+    assertThatThrownBy(
+        () -> monitoredServiceService.create(builderFactory.getContext().getAccountId(), monitoredServiceDTO))
+        .hasMessage("Service Invalid");
+  }
+
+  @Test
+  @Owner(developers = ARPITJ)
+  @Category(UnitTests.class)
+  public void testCreate_invalidEnvRef() throws IllegalAccessException {
+    NextGenService nextGenService = Mockito.mock(NextGenService.class);
+    FieldUtils.writeField(monitoredServiceService, "nextGenService", nextGenService, true);
+    when(nextGenService.getEnvironment(any(), any(), any(), any())).thenThrow(new BadRequestException("Env Invalid"));
+    when(featureFlagService.isFeatureFlagEnabled(any(), any())).thenReturn(true);
+    MonitoredServiceDTO monitoredServiceDTO = createMonitoredServiceDTO();
+    assertThatThrownBy(
+        () -> monitoredServiceService.create(builderFactory.getContext().getAccountId(), monitoredServiceDTO))
+        .hasMessage("Env Invalid");
+  }
+
+  @Test
+  @Owner(developers = ARPITJ)
+  @Category(UnitTests.class)
+  public void testCreate_invalidEnvList() throws IllegalAccessException {
+    NextGenService nextGenService = Mockito.mock(NextGenService.class);
+    FieldUtils.writeField(monitoredServiceService, "nextGenService", nextGenService, true);
+    when(featureFlagService.isFeatureFlagEnabled(any(), any())).thenReturn(true);
+    EnvironmentResponse environmentResponse1 = EnvironmentResponse.builder()
+                                                   .environment(EnvironmentResponseDTO.builder()
+                                                                    .accountId("accountId")
+                                                                    .orgIdentifier("orgId")
+                                                                    .projectIdentifier("projectId")
+                                                                    .identifier("env")
+                                                                    .build())
+                                                   .build();
+    EnvironmentResponse environmentResponse2 = EnvironmentResponse.builder()
+                                                   .environment(EnvironmentResponseDTO.builder()
+                                                                    .accountId("accountId")
+                                                                    .orgIdentifier("orgId")
+                                                                    .identifier("env")
+                                                                    .build())
+                                                   .build();
+    when(nextGenService.listEnvironment(any(), any(), any(), any()))
+        .thenReturn(Arrays.asList(environmentResponse1, environmentResponse2));
+    List<String> envRefList = Arrays.asList("env", "org.env", "env2");
+    MonitoredServiceDTO monitoredServiceDTO = builderFactory.monitoredServiceDTOBuilder()
+                                                  .type(MonitoredServiceType.INFRASTRUCTURE)
+                                                  .environmentRefList(envRefList)
+                                                  .build();
+    assertThatThrownBy(
+        () -> monitoredServiceService.create(builderFactory.getContext().getAccountId(), monitoredServiceDTO))
+        .hasMessage("Invalid Environment Identifiers: env2");
+  }
+
+  @Test
+  @Owner(developers = ARPITJ)
+  @Category(UnitTests.class)
+  public void testCreate_invalidConnectorRef() throws IllegalAccessException {
+    NextGenService nextGenService = Mockito.spy(new NextGenServiceImpl());
+    FieldUtils.writeField(monitoredServiceService, "nextGenService", nextGenService, true);
+    when(featureFlagService.isFeatureFlagEnabled(any(), any())).thenReturn(true);
+    ConnectorResponseDTO connectorResponseDTO1 = ConnectorResponseDTO.builder()
+                                                     .connector(ConnectorInfoDTO.builder()
+                                                                    .orgIdentifier("orgId")
+                                                                    .projectIdentifier("projectId")
+                                                                    .identifier("connectorRef")
+                                                                    .build())
+                                                     .build();
+    ConnectorResponseDTO connectorResponseDTO2 =
+        ConnectorResponseDTO.builder()
+            .connector(ConnectorInfoDTO.builder().orgIdentifier("orgId").identifier("connectorRef").build())
+            .build();
+    EnvironmentResponse environmentResponse =
+        EnvironmentResponse.builder()
+            .environment(
+                EnvironmentResponseDTO.builder()
+                    .identifier(builderFactory.getContext().getServiceEnvironmentParams().getEnvironmentIdentifier())
+                    .build())
+            .build();
+    doReturn(null).when(nextGenService).getService(any(), any(), any(), any());
+    doReturn(null).when(nextGenService).getEnvironment(any(), any(), any(), any());
+    doReturn(Arrays.asList(environmentResponse)).when(nextGenService).listEnvironment(any(), any(), any(), any());
+    doReturn(Arrays.asList(connectorResponseDTO1, connectorResponseDTO2))
+        .when(nextGenService)
+        .listConnector(any(), any(), any(), any());
+    HealthSource healthSource1 = builderFactory.createHealthSource(CVMonitoringCategory.ERRORS);
+    healthSource1.setIdentifier("HealthSource1");
+    healthSource1.setSpec(AppDynamicsHealthSourceSpec.builder().connectorRef("connectorRef").build());
+
+    HealthSource healthSource2 = builderFactory.createHealthSource(CVMonitoringCategory.ERRORS);
+    healthSource2.setIdentifier("HealthSource2");
+    healthSource2.setSpec(AppDynamicsHealthSourceSpec.builder().connectorRef("org.connectorRef").build());
+
+    HealthSource healthSource3 = builderFactory.createHealthSource(CVMonitoringCategory.ERRORS);
+    healthSource3.setIdentifier("HealthSource3");
+    healthSource3.setSpec(AppDynamicsHealthSourceSpec.builder().connectorRef("connectorRef2").build());
+    Set<HealthSource> healthSources = new HashSet<>(Arrays.asList(healthSource1, healthSource2, healthSource3));
+    MonitoredServiceDTO monitoredServiceDTO = builderFactory.monitoredServiceDTOBuilder()
+                                                  .sources(Sources.builder().healthSources(healthSources).build())
+                                                  .build();
+    assertThatThrownBy(
+        () -> monitoredServiceService.create(builderFactory.getContext().getAccountId(), monitoredServiceDTO))
+        .hasMessage("Invalid connector refs: connectorRef2");
+  }
+
+  @Test
+  @Owner(developers = DEEPAK_CHHIKARA)
+  @Category(UnitTests.class)
+  public void testCreate_validDuplicateConnectorRef() throws IllegalAccessException {
+    NextGenService nextGenService = Mockito.spy(new NextGenServiceImpl());
+    FieldUtils.writeField(monitoredServiceService, "nextGenService", nextGenService, true);
+    when(featureFlagService.isFeatureFlagEnabled(any(), any())).thenReturn(true);
+    ConnectorResponseDTO connectorResponseDTO1 = ConnectorResponseDTO.builder()
+                                                     .connector(ConnectorInfoDTO.builder()
+                                                                    .orgIdentifier("orgId")
+                                                                    .projectIdentifier("projectId")
+                                                                    .identifier("connectorRef")
+                                                                    .build())
+                                                     .build();
+    EnvironmentResponse environmentResponse =
+        EnvironmentResponse.builder()
+            .environment(
+                EnvironmentResponseDTO.builder()
+                    .identifier(builderFactory.getContext().getServiceEnvironmentParams().getEnvironmentIdentifier())
+                    .build())
+            .build();
+    doReturn(null).when(nextGenService).getService(any(), any(), any(), any());
+    doReturn(null).when(nextGenService).getEnvironment(any(), any(), any(), any());
+    doReturn(Arrays.asList(environmentResponse)).when(nextGenService).listEnvironment(any(), any(), any(), any());
+    doReturn(Arrays.asList(connectorResponseDTO1)).when(nextGenService).listConnector(any(), any(), any(), any());
+    HealthSource healthSource1 = builderFactory.createHealthSource(CVMonitoringCategory.ERRORS);
+    healthSource1.setIdentifier("HealthSource1");
+    healthSource1.setSpec(AppDynamicsHealthSourceSpec.builder().connectorRef("connectorRef").build());
+
+    HealthSource healthSource2 = builderFactory.createHealthSource(CVMonitoringCategory.ERRORS);
+    healthSource2.setIdentifier("HealthSource2");
+    healthSource2.setSpec(AppDynamicsHealthSourceSpec.builder().connectorRef("connectorRef").build());
+    Set<HealthSource> healthSources = new HashSet<>(Arrays.asList(healthSource1, healthSource2));
+    MonitoredServiceDTO monitoredServiceDTO = builderFactory.monitoredServiceDTOBuilder()
+                                                  .sources(Sources.builder().healthSources(healthSources).build())
+                                                  .build();
+    MonitoredServiceResponse monitoredServiceResponse =
+        monitoredServiceService.create(builderFactory.getContext().getAccountId(), monitoredServiceDTO);
+    assertThat(monitoredServiceResponse.getMonitoredServiceDTO().getIdentifier())
+        .isEqualTo(monitoredServiceDTO.getIdentifier());
+  }
+
+  @Test
   @Owner(developers = KANHAIYA)
   @Category(UnitTests.class)
   public void testCreate_monitoredServiceNonEmptyHealthSources() {
@@ -810,13 +977,7 @@ public class MonitoredServiceServiceImplTest extends CvNextGenTestBase {
   @Owner(developers = ABHIJITH)
   @Category(UnitTests.class)
   public void testUpdate_ChangeSourceCreation() {
-    MonitoredServiceDTO monitoredServiceDTO =
-        createMonitoredServiceDTOBuilder()
-            .sources(Sources.builder()
-                         .changeSources(
-                             new HashSet<>(Arrays.asList(builderFactory.getHarnessCDChangeSourceDTOBuilder().build())))
-                         .build())
-            .build();
+    MonitoredServiceDTO monitoredServiceDTO = createMonitoredServiceDTOBuilder().build();
     MonitoredServiceDTO savedMonitoredServiceDTO =
         monitoredServiceService.create(builderFactory.getContext().getAccountId(), monitoredServiceDTO)
             .getMonitoredServiceDTO();
@@ -824,8 +985,8 @@ public class MonitoredServiceServiceImplTest extends CvNextGenTestBase {
     MonitoredServiceDTO toUpdateMonitoredServiceDTO =
         createMonitoredServiceDTOBuilder()
             .sources(Sources.builder()
-                         .changeSources(
-                             new HashSet<>(Arrays.asList(builderFactory.getHarnessCDChangeSourceDTOBuilder().build(),
+                         .changeSources(new HashSet<>(
+                             Arrays.asList(builderFactory.getHarnessCDCurrentGenChangeSourceDTOBuilder().build(),
                                  builderFactory.getPagerDutyChangeSourceDTOBuilder().build())))
                          .build())
             .build();
@@ -1134,6 +1295,41 @@ public class MonitoredServiceServiceImplTest extends CvNextGenTestBase {
   }
 
   @Test
+  @Owner(developers = ARPITJ)
+  @Category(UnitTests.class)
+  public void testList_sortingOrder() throws IllegalAccessException {
+    clock = Clock.systemDefaultZone();
+    FieldUtils.writeField(monitoredServiceService, "clock", clock, true);
+    MonitoredServiceDTO monitoredServiceOneDTO = createMonitoredServiceDTOWithCustomDependencies(
+        "service_1_local", environmentParams.getServiceIdentifier(), Sets.newHashSet("service_2_local"));
+    MonitoredServiceDTO monitoredServiceTwoDTO = createMonitoredServiceDTOWithCustomDependencies(
+        "service_2_local", "service_2", Sets.newHashSet("service_1_local"));
+    monitoredServiceService.create(builderFactory.getContext().getAccountId(), monitoredServiceOneDTO);
+    monitoredServiceService.create(builderFactory.getContext().getAccountId(), monitoredServiceTwoDTO);
+    environmentIdentifier = "new-environment";
+    monitoredServiceIdentifier = "new-monitored-service-identifier";
+    healthSourceIdentifier = "new-health-source-identifier";
+    monitoredServiceOneDTO = createMonitoredServiceDTOWithCustomDependencies(
+        monitoredServiceIdentifier, environmentParams.getServiceIdentifier(), Sets.newHashSet("service_2_local"));
+    monitoredServiceService.create(builderFactory.getContext().getAccountId(), monitoredServiceOneDTO);
+    monitoredServiceService.update(builderFactory.getContext().getAccountId(), monitoredServiceTwoDTO);
+    PageResponse<MonitoredServiceListItemDTO> monitoredServiceListDTOPageResponse =
+        monitoredServiceService.list(projectParams, null, 0, 10, null, null, false);
+    assertThat(monitoredServiceListDTOPageResponse.getTotalPages()).isEqualTo(1);
+    assertThat(monitoredServiceListDTOPageResponse.getTotalItems()).isEqualTo(3);
+    List<MonitoredServiceListItemDTO> monitoredServiceListItemDTOS = monitoredServiceListDTOPageResponse.getContent();
+    MonitoredServiceListItemDTO monitoredServiceListItemDTO = monitoredServiceListItemDTOS.get(0);
+    assertThat(monitoredServiceListItemDTO.getName()).isEqualTo("service_2_local");
+    assertThat(monitoredServiceListItemDTO.getIdentifier()).isEqualTo("service_2_local");
+    assertThat(monitoredServiceListItemDTO.getServiceName()).isEqualTo("Mocked service name");
+    assertThat(monitoredServiceListItemDTO.getServiceRef()).isEqualTo("service_2");
+    assertThat(monitoredServiceListItemDTO.getEnvironmentName()).isEqualTo("Mocked env name");
+    assertThat(monitoredServiceListItemDTO.getType()).isEqualTo(MonitoredServiceType.APPLICATION);
+    assertThat(monitoredServiceListItemDTO.isHealthMonitoringEnabled()).isFalse();
+    assertThat(monitoredServiceListItemDTO.getTags()).isEqualTo(tags);
+  }
+
+  @Test
   @Owner(developers = KANHAIYA)
   @Category(UnitTests.class)
   public void testList_withEnvironmentFilter() throws IllegalAccessException {
@@ -1153,7 +1349,7 @@ public class MonitoredServiceServiceImplTest extends CvNextGenTestBase {
     ChangeSummaryDTO changeSummary = ChangeSummaryDTO.builder().build();
     when(changeSourceServiceMock.getChangeSummary(any(), any(), any(), any())).thenReturn(changeSummary);
     PageResponse<MonitoredServiceListItemDTO> monitoredServiceListDTOPageResponse = monitoredServiceService.list(
-        projectParams, Collections.singletonList(environmentIdentifier), 0, 10, null, false);
+        projectParams, Collections.singletonList(environmentIdentifier), 0, 10, null, null, false);
     assertThat(monitoredServiceListDTOPageResponse.getTotalPages()).isEqualTo(1);
     assertThat(monitoredServiceListDTOPageResponse.getTotalItems()).isEqualTo(1);
     MonitoredServiceListItemDTO monitoredServiceListItemDTO = monitoredServiceListDTOPageResponse.getContent().get(0);
@@ -1168,9 +1364,106 @@ public class MonitoredServiceServiceImplTest extends CvNextGenTestBase {
     assertThat(monitoredServiceListItemDTO.isHealthMonitoringEnabled()).isFalse();
 
     monitoredServiceListDTOPageResponse =
-        monitoredServiceService.list(projectParams, Collections.emptyList(), 0, 10, null, false);
+        monitoredServiceService.list(projectParams, Collections.emptyList(), 0, 10, null, null, false);
     assertThat(monitoredServiceListDTOPageResponse.getTotalPages()).isEqualTo(1);
     assertThat(monitoredServiceListDTOPageResponse.getTotalItems()).isEqualTo(3);
+  }
+
+  @Test
+  @Owner(developers = KARAN_SARASWAT)
+  @Category(UnitTests.class)
+  public void testGetMSPlatformList_withServiceTypeFilter() {
+    MonitoredServiceDTO monitoredServiceOneDTO =
+        createMonitoredServiceDTOWithCustomDependencies("service_1_local", "service_1", Sets.newHashSet());
+    MonitoredServiceDTO monitoredServiceTwoDTO =
+        createMonitoredServiceDTOWithCustomDependencies("service_2_local", "service_2", Sets.newHashSet());
+    MonitoredServiceDTO monitoredServiceThreeDTO = createMonitoredServiceDTOBuilder("service_3", "service_3", null)
+                                                       .type(MonitoredServiceType.INFRASTRUCTURE)
+                                                       .environmentRefList(Arrays.asList("local", "testing"))
+                                                       .build();
+    monitoredServiceService.create(builderFactory.getContext().getAccountId(), monitoredServiceOneDTO);
+    monitoredServiceService.create(builderFactory.getContext().getAccountId(), monitoredServiceTwoDTO);
+    monitoredServiceService.create(builderFactory.getContext().getAccountId(), monitoredServiceThreeDTO);
+
+    PageResponse<MonitoredServicePlatformResponse> monitoredServiceListItemPageResponse =
+        monitoredServiceService.getMSPlatformList(
+            projectParams, null, 0, 10, null, MonitoredServiceType.APPLICATION, false);
+    assertThat(monitoredServiceListItemPageResponse.getTotalPages()).isEqualTo(1);
+    assertThat(monitoredServiceListItemPageResponse.getTotalItems()).isEqualTo(2);
+    MonitoredServicePlatformResponse monitoredServicePlatformResponse =
+        monitoredServiceListItemPageResponse.getContent().get(0);
+    assertThat(monitoredServicePlatformResponse.getName()).isEqualTo("service_2_local");
+    assertThat(monitoredServicePlatformResponse.getIdentifier()).isEqualTo("service_2_local");
+    assertThat(monitoredServicePlatformResponse.getServiceRef()).isEqualTo("service_2");
+    assertThat(monitoredServicePlatformResponse.getEnvironmentRefs()).isEqualTo(List.of(environmentIdentifier));
+    assertThat(monitoredServicePlatformResponse.getServiceName()).isEqualTo("Mocked service name");
+    assertThat(monitoredServicePlatformResponse.getType()).isEqualTo(MonitoredServiceType.APPLICATION);
+
+    monitoredServiceListItemPageResponse = monitoredServiceService.getMSPlatformList(
+        projectParams, null, 0, 10, null, MonitoredServiceType.INFRASTRUCTURE, false);
+    assertThat(monitoredServiceListItemPageResponse.getTotalPages()).isEqualTo(1);
+    assertThat(monitoredServiceListItemPageResponse.getTotalItems()).isEqualTo(1);
+    monitoredServicePlatformResponse = monitoredServiceListItemPageResponse.getContent().get(0);
+    assertThat(monitoredServicePlatformResponse.getIdentifier()).isEqualTo("service_3");
+    assertThat(monitoredServicePlatformResponse.getServiceRef()).isEqualTo("service_3");
+    assertThat(monitoredServicePlatformResponse.getEnvironmentRefs()).isEqualTo(Arrays.asList("local", "testing"));
+    assertThat(monitoredServicePlatformResponse.getType()).isEqualTo(MonitoredServiceType.INFRASTRUCTURE);
+  }
+
+  @Test
+  @Owner(developers = KARAN_SARASWAT)
+  @Category(UnitTests.class)
+  public void testGetMSPlatformList_withHiddenNotConfiguredServices() {
+    MonitoredServiceDTO monitoredServiceOneDTO =
+        createMonitoredServiceDTOWithCustomDependencies("service_1_local", "service_1", Sets.newHashSet());
+    MonitoredServiceDTO monitoredServiceTwoDTO =
+        createMonitoredServiceDTOWithCustomDependencies("service_2_local", "service_2", Sets.newHashSet());
+    monitoredServiceTwoDTO.setSources(MonitoredServiceDTO.Sources.builder().build());
+    MonitoredServiceDTO monitoredServiceThreeDTO = createMonitoredServiceDTOBuilder("service_3", "service_3", null)
+                                                       .type(MonitoredServiceType.INFRASTRUCTURE)
+                                                       .environmentRefList(Arrays.asList("local", "testing"))
+                                                       .build();
+    MonitoredServiceDTO monitoredServiceFourDTO =
+        createMonitoredServiceDTOBuilder("service_4_env", "service_4", "env").build();
+
+    monitoredServiceService.create(builderFactory.getContext().getAccountId(), monitoredServiceOneDTO);
+    monitoredServiceService.create(builderFactory.getContext().getAccountId(), monitoredServiceTwoDTO);
+    monitoredServiceService.create(builderFactory.getContext().getAccountId(), monitoredServiceThreeDTO);
+    monitoredServiceService.create(builderFactory.getContext().getAccountId(), monitoredServiceFourDTO);
+
+    PageResponse<MonitoredServicePlatformResponse> monitoredServiceListItemPageResponse =
+        monitoredServiceService.getMSPlatformList(projectParams, null, 0, 10, null, null, false);
+    assertThat(monitoredServiceListItemPageResponse.getTotalPages()).isEqualTo(1);
+    assertThat(monitoredServiceListItemPageResponse.getTotalItems()).isEqualTo(4);
+
+    monitoredServiceListItemPageResponse =
+        monitoredServiceService.getMSPlatformList(projectParams, null, 0, 10, null, null, true);
+    assertThat(monitoredServiceListItemPageResponse.getTotalPages()).isEqualTo(1);
+    assertThat(monitoredServiceListItemPageResponse.getTotalItems()).isEqualTo(3);
+
+    MonitoredServicePlatformResponse monitoredServicePlatformResponse =
+        monitoredServiceListItemPageResponse.getContent().get(0);
+    assertThat(monitoredServicePlatformResponse.getIdentifier()).isEqualTo("service_4_env");
+    assertThat(monitoredServicePlatformResponse.getServiceRef()).isEqualTo("service_4");
+    assertThat(monitoredServicePlatformResponse.getEnvironmentRefs()).isEqualTo(List.of("env"));
+    assertThat(monitoredServicePlatformResponse.getType()).isEqualTo(MonitoredServiceType.APPLICATION);
+    assertThat(monitoredServicePlatformResponse.getConfiguredChangeSources()).isEqualTo(1);
+    assertThat(monitoredServicePlatformResponse.getConfiguredHealthSources()).isEqualTo(1);
+
+    monitoredServicePlatformResponse = monitoredServiceListItemPageResponse.getContent().get(1);
+    assertThat(monitoredServicePlatformResponse.getIdentifier()).isEqualTo("service_3");
+    assertThat(monitoredServicePlatformResponse.getServiceRef()).isEqualTo("service_3");
+    assertThat(monitoredServicePlatformResponse.getEnvironmentRefs()).isEqualTo(Arrays.asList("local", "testing"));
+    assertThat(monitoredServicePlatformResponse.getType()).isEqualTo(MonitoredServiceType.INFRASTRUCTURE);
+    assertThat(monitoredServicePlatformResponse.getConfiguredChangeSources()).isEqualTo(1);
+    assertThat(monitoredServicePlatformResponse.getConfiguredHealthSources()).isEqualTo(1);
+
+    monitoredServicePlatformResponse = monitoredServiceListItemPageResponse.getContent().get(2);
+    assertThat(monitoredServicePlatformResponse.getIdentifier()).isEqualTo("service_1_local");
+    assertThat(monitoredServicePlatformResponse.getServiceRef()).isEqualTo("service_1");
+    assertThat(monitoredServicePlatformResponse.getType()).isEqualTo(MonitoredServiceType.APPLICATION);
+    assertThat(monitoredServicePlatformResponse.getConfiguredChangeSources()).isEqualTo(0);
+    assertThat(monitoredServicePlatformResponse.getConfiguredHealthSources()).isEqualTo(1);
   }
 
   @Test
@@ -1195,7 +1488,7 @@ public class MonitoredServiceServiceImplTest extends CvNextGenTestBase {
     ChangeSummaryDTO changeSummary = ChangeSummaryDTO.builder().build();
     when(changeSourceServiceMock.getChangeSummary(any(), any(), any(), any())).thenReturn(changeSummary);
     PageResponse<MonitoredServiceListItemDTO> monitoredServiceListDTOPageResponse =
-        monitoredServiceService.list(projectParams, Collections.singletonList("env2"), 0, 10, null, false);
+        monitoredServiceService.list(projectParams, Collections.singletonList("env2"), 0, 10, null, null, false);
     assertThat(monitoredServiceListDTOPageResponse.getTotalPages()).isEqualTo(1);
     assertThat(monitoredServiceListDTOPageResponse.getTotalItems()).isEqualTo(1);
     MonitoredServiceListItemDTO monitoredServiceListItemDTO = monitoredServiceListDTOPageResponse.getContent().get(0);
@@ -1223,7 +1516,7 @@ public class MonitoredServiceServiceImplTest extends CvNextGenTestBase {
         monitoredServiceIdentifier, environmentParams.getServiceIdentifier(), Sets.newHashSet("service_2_local"));
     monitoredServiceService.create(builderFactory.getContext().getAccountId(), monitoredServiceOneDTO);
     PageResponse<MonitoredServiceListItemDTO> monitoredServiceListDTOPageResponse =
-        monitoredServiceService.list(projectParams, null, 0, 10, null, false);
+        monitoredServiceService.list(projectParams, null, 0, 10, null, null, false);
     assertThat(monitoredServiceListDTOPageResponse.getTotalPages()).isEqualTo(1);
     assertThat(monitoredServiceListDTOPageResponse.getTotalItems()).isEqualTo(3);
     List<MonitoredServiceListItemDTO> monitoredServiceListItemDTOS =
@@ -1258,7 +1551,7 @@ public class MonitoredServiceServiceImplTest extends CvNextGenTestBase {
     monitoredServiceService.setHealthMonitoringFlag(builderFactory.getProjectParams(), "ms2", true);
 
     PageResponse<MonitoredServiceListItemDTO> monitoredServiceListDTOPageResponse =
-        monitoredServiceService.list(projectParams, null, 0, 10, null, false);
+        monitoredServiceService.list(projectParams, null, 0, 10, null, null, false);
     assertThat(monitoredServiceListDTOPageResponse.getTotalPages()).isEqualTo(1);
     assertThat(monitoredServiceListDTOPageResponse.getTotalItems()).isEqualTo(3);
     List<MonitoredServiceListItemDTO> monitoredServiceListItemDTOS = monitoredServiceListDTOPageResponse.getContent();
@@ -1287,7 +1580,7 @@ public class MonitoredServiceServiceImplTest extends CvNextGenTestBase {
     monitoredServiceService.setHealthMonitoringFlag(builderFactory.getProjectParams(), "ms2", true);
 
     PageResponse<MonitoredServiceListItemDTO> monitoredServiceListDTOPageResponse =
-        monitoredServiceService.list(projectParams, null, 0, 10, null, false);
+        monitoredServiceService.list(projectParams, null, 0, 10, null, null, false);
     assertThat(monitoredServiceListDTOPageResponse.getTotalPages()).isEqualTo(1);
     assertThat(monitoredServiceListDTOPageResponse.getTotalItems()).isEqualTo(4);
     List<MonitoredServiceListItemDTO> monitoredServiceListItemDTOS = monitoredServiceListDTOPageResponse.getContent();
@@ -1763,11 +2056,7 @@ public class MonitoredServiceServiceImplTest extends CvNextGenTestBase {
             + "  environmentRef:\n"
             + "  sources:\n"
             + "    healthSources:\n"
-            + "    changeSources:\n"
-            + "      - name: Harness CD Next Gen\n"
-            + "        identifier: harness_cd_next_gen\n"
-            + "        type: HarnessCDNextGen\n"
-            + "        enabled : true\n");
+            + "    changeSources:\n");
 
     assert (monitoredServiceService.getYamlTemplate(projectParams, MonitoredServiceType.INFRASTRUCTURE))
         .equals("monitoredService:\n"
@@ -1795,11 +2084,7 @@ public class MonitoredServiceServiceImplTest extends CvNextGenTestBase {
             + "  environmentRef:\n"
             + "  sources:\n"
             + "    healthSources:\n"
-            + "    changeSources:\n"
-            + "      - name: Harness CD Next Gen\n"
-            + "        identifier: harness_cd_next_gen\n"
-            + "        type: HarnessCDNextGen\n"
-            + "        enabled : true\n");
+            + "    changeSources:\n");
   }
 
   @Test
@@ -1820,11 +2105,7 @@ public class MonitoredServiceServiceImplTest extends CvNextGenTestBase {
             + "  environmentRef:\n"
             + "  sources:\n"
             + "    healthSources:\n"
-            + "    changeSources:\n"
-            + "      - name: Harness CD Next Gen\n"
-            + "        identifier: harness_cd_next_gen\n"
-            + "        type: HarnessCDNextGen\n"
-            + "        enabled : true\n");
+            + "    changeSources:\n");
 
     assert (monitoredServiceService.getYamlTemplate(updatedProjectParams, MonitoredServiceType.INFRASTRUCTURE))
         .equals("monitoredService:\n"
@@ -2007,7 +2288,7 @@ public class MonitoredServiceServiceImplTest extends CvNextGenTestBase {
   @Category(UnitTests.class)
   public void testList_withNoMonitoredService() {
     PageResponse<MonitoredServiceListItemDTO> monitoredServiceListDTOPageResponse = monitoredServiceService.list(
-        projectParams, Collections.singletonList(environmentIdentifier), 0, 10, null, false);
+        projectParams, Collections.singletonList(environmentIdentifier), 0, 10, null, null, false);
     assertThat(monitoredServiceListDTOPageResponse.getTotalPages()).isEqualTo(0);
     assertThat(monitoredServiceListDTOPageResponse.getTotalItems()).isEqualTo(0);
     assertThat(monitoredServiceListDTOPageResponse.getPageItemCount()).isEqualTo(0);
@@ -2025,7 +2306,7 @@ public class MonitoredServiceServiceImplTest extends CvNextGenTestBase {
     monitoredServiceService.create(builderFactory.getContext().getAccountId(), monitoredServiceOneDTO);
     monitoredServiceService.create(builderFactory.getContext().getAccountId(), monitoredServiceTwoDTO);
     PageResponse<MonitoredServiceListItemDTO> monitoredServiceListDTOPageResponse = monitoredServiceService.list(
-        projectParams, Collections.singletonList(environmentIdentifier), 0, 10, null, false);
+        projectParams, Collections.singletonList(environmentIdentifier), 0, 10, null, null, false);
     monitoredServiceListDTOPageResponse.getContent().sort(
         Comparator.comparing(MonitoredServiceListItemDTO::getIdentifier));
     assertThat(monitoredServiceListDTOPageResponse.getTotalPages()).isEqualTo(1);
@@ -2078,7 +2359,7 @@ public class MonitoredServiceServiceImplTest extends CvNextGenTestBase {
     hPersistence.save(msTwoHeatMap);
 
     PageResponse<MonitoredServiceListItemDTO> monitoredServiceListDTOPageResponse = monitoredServiceService.list(
-        projectParams, Collections.singletonList(environmentIdentifier), 0, 10, null, true);
+        projectParams, Collections.singletonList(environmentIdentifier), 0, 10, null, null, true);
 
     assertThat(monitoredServiceListDTOPageResponse.getTotalPages()).isEqualTo(1);
     assertThat(monitoredServiceListDTOPageResponse.getTotalItems()).isEqualTo(1);
@@ -2150,7 +2431,7 @@ public class MonitoredServiceServiceImplTest extends CvNextGenTestBase {
     hPersistence.save(msFiveHeatMap);
 
     PageResponse<MonitoredServiceListItemDTO> monitoredServiceListDTOPageResponse =
-        monitoredServiceService.list(projectParams, null, 0, 10, null, false);
+        monitoredServiceService.list(projectParams, null, 0, 10, null, null, false);
 
     assertThat(monitoredServiceListDTOPageResponse.getTotalPages()).isEqualTo(1);
     assertThat(monitoredServiceListDTOPageResponse.getTotalItems()).isEqualTo(5);
@@ -2304,7 +2585,7 @@ public class MonitoredServiceServiceImplTest extends CvNextGenTestBase {
                                                 .build();
     hPersistence.save(sloHealthIndicator);
     PageResponse<MonitoredServiceListItemDTO> monitoredServiceListItemDTOPageResponse = monitoredServiceService.list(
-        projectParams, Collections.singletonList(environmentIdentifier), 0, 10, null, false);
+        projectParams, Collections.singletonList(environmentIdentifier), 0, 10, null, null, false);
     MonitoredServiceListItemDTO monitoredServiceListItemDTO =
         monitoredServiceListItemDTOPageResponse.getContent().get(0);
     assertThat(monitoredServiceListItemDTO.getSloHealthIndicators().size()).isEqualTo(1);
@@ -2469,11 +2750,10 @@ public class MonitoredServiceServiceImplTest extends CvNextGenTestBase {
         .identifier(identifier)
         .name(identifier)
         .serviceRef(serviceIdentifier)
-        .sources(MonitoredServiceDTO.Sources.builder()
-                     .healthSources(Arrays.asList(builderFactory.createHealthSource(CVMonitoringCategory.ERRORS))
-                                        .stream()
-                                        .collect(Collectors.toSet()))
-                     .build())
+        .sources(
+            MonitoredServiceDTO.Sources.builder()
+                .healthSources(new HashSet<>(List.of(builderFactory.createHealthSource(CVMonitoringCategory.ERRORS))))
+                .build())
         .dependencies(
             Sets.newHashSet(dependentServiceIdentifiers.stream()
                                 .map(id -> ServiceDependencyDTO.builder().monitoredServiceIdentifier(id).build())
@@ -2483,37 +2763,31 @@ public class MonitoredServiceServiceImplTest extends CvNextGenTestBase {
 
   MonitoredServiceDTO createMonitoredServiceDTO() {
     return createMonitoredServiceDTOBuilder()
-        .sources(MonitoredServiceDTO.Sources.builder()
-                     .healthSources(Arrays.asList(builderFactory.createHealthSource(CVMonitoringCategory.ERRORS))
-                                        .stream()
-                                        .collect(Collectors.toSet()))
-                     .changeSources(Arrays.asList(builderFactory.getHarnessCDChangeSourceDTOBuilder().build())
-                                        .stream()
-                                        .collect(Collectors.toSet()))
-                     .build())
+        .sources(
+            MonitoredServiceDTO.Sources.builder()
+                .healthSources(new HashSet<>(List.of(builderFactory.createHealthSource(CVMonitoringCategory.ERRORS))))
+                .changeSources(
+                    new HashSet<>(List.of(builderFactory.getHarnessCDCurrentGenChangeSourceDTOBuilder().build())))
+                .build())
         .build();
   }
 
   MonitoredServiceDTO createMonitoredServiceDTOWithPagerDutyChangeSource() {
     return createMonitoredServiceDTOBuilder()
-        .sources(MonitoredServiceDTO.Sources.builder()
-                     .healthSources(Arrays.asList(builderFactory.createHealthSource(CVMonitoringCategory.ERRORS))
-                                        .stream()
-                                        .collect(Collectors.toSet()))
-                     .changeSources(Arrays.asList(builderFactory.getPagerDutyChangeSourceDTOBuilder().build())
-                                        .stream()
-                                        .collect(Collectors.toSet()))
-                     .build())
+        .sources(
+            MonitoredServiceDTO.Sources.builder()
+                .healthSources(new HashSet<>(List.of(builderFactory.createHealthSource(CVMonitoringCategory.ERRORS))))
+                .changeSources(new HashSet<>(List.of(builderFactory.getPagerDutyChangeSourceDTOBuilder().build())))
+                .build())
         .build();
   }
 
   MonitoredServiceDTO createMonitoredServiceDTOWithDependencies() {
     return createMonitoredServiceDTOBuilder()
-        .sources(MonitoredServiceDTO.Sources.builder()
-                     .healthSources(Arrays.asList(builderFactory.createHealthSource(CVMonitoringCategory.ERRORS))
-                                        .stream()
-                                        .collect(Collectors.toSet()))
-                     .build())
+        .sources(
+            MonitoredServiceDTO.Sources.builder()
+                .healthSources(new HashSet<>(List.of(builderFactory.createHealthSource(CVMonitoringCategory.ERRORS))))
+                .build())
         .dependencies(
             Sets.newHashSet(ServiceDependencyDTO.builder().monitoredServiceIdentifier(randomAlphanumeric(20)).build(),
                 ServiceDependencyDTO.builder().monitoredServiceIdentifier(randomAlphanumeric(20)).build()))
@@ -2803,7 +3077,7 @@ public class MonitoredServiceServiceImplTest extends CvNextGenTestBase {
         Arrays.asList(NotificationRuleCondition.builder()
                           .type(NotificationRuleConditionType.CHANGE_OBSERVED)
                           .spec(ChangeObservedConditionSpec.builder()
-                                    .changeEventTypes(Arrays.asList(MonitoredServiceChangeEventType.DEPLOYMENT))
+                                    .changeCategories(Arrays.asList(ChangeCategory.DEPLOYMENT))
                                     .build())
                           .build()));
     NotificationRuleResponse notificationRuleResponseTwo =
@@ -2925,9 +3199,39 @@ public class MonitoredServiceServiceImplTest extends CvNextGenTestBase {
     MonitoredService monitoredService = getMonitoredService(monitoredServiceDTO.getIdentifier());
     createActivity(monitoredServiceDTO);
 
+    MonitoredServiceChangeObservedCondition condition = MonitoredServiceChangeObservedCondition.builder()
+                                                            .changeCategories(Arrays.asList(ChangeCategory.DEPLOYMENT))
+                                                            .build();
+
+    assertThat(((MonitoredServiceServiceImpl) monitoredServiceService)
+                   .getChangeObservedNotificationData(monitoredService, condition)
+                   .shouldSendNotification())
+        .isTrue();
+  }
+
+  @Test
+  @Owner(developers = KARAN_SARASWAT)
+  @Category(UnitTests.class)
+  public void testShouldSendNotification_withChangeObservedCondition_forFFActivity() throws IllegalAccessException {
+    FieldUtils.writeField(monitoredServiceService, "clock", clock, true);
+    NotificationRuleDTO notificationRuleDTO =
+        builderFactory.getNotificationRuleDTOBuilder(NotificationRuleType.MONITORED_SERVICE).build();
+    NotificationRuleResponse notificationRuleResponse =
+        notificationRuleService.create(builderFactory.getContext().getProjectParams(), notificationRuleDTO);
+    MonitoredServiceDTO monitoredServiceDTO = createMonitoredServiceDTOWithCustomDependencies(
+        "service_1_local", environmentParams.getServiceIdentifier(), Sets.newHashSet());
+    monitoredServiceDTO.setNotificationRuleRefs(
+        Arrays.asList(NotificationRuleRefDTO.builder()
+                          .notificationRuleRef(notificationRuleResponse.getNotificationRule().getIdentifier())
+                          .enabled(true)
+                          .build()));
+    monitoredServiceService.create(builderFactory.getContext().getAccountId(), monitoredServiceDTO);
+    MonitoredService monitoredService = getMonitoredService(monitoredServiceDTO.getIdentifier());
+    createFFActivity(monitoredServiceDTO);
+
     MonitoredServiceChangeObservedCondition condition =
         MonitoredServiceChangeObservedCondition.builder()
-            .changeEventTypes(Arrays.asList(MonitoredServiceChangeEventType.DEPLOYMENT))
+            .changeCategories(Arrays.asList(ChangeCategory.FEATURE_FLAG))
             .build();
 
     assertThat(((MonitoredServiceServiceImpl) monitoredServiceService)
@@ -2958,12 +3262,11 @@ public class MonitoredServiceServiceImplTest extends CvNextGenTestBase {
     createHeatMaps(monitoredServiceDTO);
     createActivity(monitoredServiceDTO);
 
-    MonitoredServiceChangeImpactCondition condition =
-        MonitoredServiceChangeImpactCondition.builder()
-            .changeEventTypes(Arrays.asList(MonitoredServiceChangeEventType.DEPLOYMENT))
-            .threshold(20.0)
-            .period(600000)
-            .build();
+    MonitoredServiceChangeImpactCondition condition = MonitoredServiceChangeImpactCondition.builder()
+                                                          .changeCategories(Arrays.asList(ChangeCategory.DEPLOYMENT))
+                                                          .threshold(20.0)
+                                                          .period(600000)
+                                                          .build();
     assertThat(((MonitoredServiceServiceImpl) monitoredServiceService)
                    .getChangeImpactNotificationData(monitoredService, condition)
                    .shouldSendNotification())
@@ -3155,6 +3458,16 @@ public class MonitoredServiceServiceImplTest extends CvNextGenTestBase {
     useMockedPersistentLocker();
     Activity activity = builderFactory.getDeploymentActivityBuilder()
                             .monitoredServiceIdentifier(monitoredServiceDTO.getIdentifier())
+                            .activityStartTime(clock.instant().minus(5, ChronoUnit.MINUTES))
+                            .build();
+    activityService.upsert(activity);
+  }
+
+  private void createFFActivity(MonitoredServiceDTO monitoredServiceDTO) {
+    useMockedPersistentLocker();
+    Activity activity = builderFactory.getInternalChangeActivity_FFBuilder()
+                            .monitoredServiceIdentifier(monitoredServiceDTO.getIdentifier())
+                            .eventTime(clock.instant().minus(5, ChronoUnit.MINUTES))
                             .activityStartTime(clock.instant().minus(5, ChronoUnit.MINUTES))
                             .build();
     activityService.upsert(activity);
