@@ -7,10 +7,10 @@
 
 package io.harness.cvng.servicelevelobjective.services.impl;
 
-import static io.harness.cvng.servicelevelobjective.entities.SLIRecord.SLIState.BAD;
-import static io.harness.cvng.servicelevelobjective.entities.SLIRecord.SLIState.GOOD;
-import static io.harness.cvng.servicelevelobjective.entities.SLIRecord.SLIState.NO_DATA;
-import static io.harness.cvng.servicelevelobjective.entities.SLIRecord.SLIState.SKIP_DATA;
+import static io.harness.cvng.servicelevelobjective.entities.SLIState.BAD;
+import static io.harness.cvng.servicelevelobjective.entities.SLIState.GOOD;
+import static io.harness.cvng.servicelevelobjective.entities.SLIState.NO_DATA;
+import static io.harness.cvng.servicelevelobjective.entities.SLIState.SKIP_DATA;
 import static io.harness.rule.OwnerRule.VARSHA_LALWANI;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -24,8 +24,8 @@ import io.harness.cvng.CVNGTestConstants;
 import io.harness.cvng.downtime.beans.EntityUnavailabilityStatusesDTO;
 import io.harness.cvng.downtime.services.api.DowntimeService;
 import io.harness.cvng.downtime.services.api.EntityUnavailabilityStatusesService;
-import io.harness.cvng.servicelevelobjective.entities.SLIRecord.SLIRecordParam;
-import io.harness.cvng.servicelevelobjective.entities.SLIRecord.SLIState;
+import io.harness.cvng.servicelevelobjective.entities.SLIRecordParam;
+import io.harness.cvng.servicelevelobjective.entities.SLIState;
 import io.harness.cvng.servicelevelobjective.services.api.SLIDataUnavailabilityInstancesHandlerService;
 import io.harness.rule.Owner;
 
@@ -69,20 +69,39 @@ public class SLIDataUnavailabilityFilterServiceImplTest extends CvNextGenTestBas
   @Test
   @Owner(developers = VARSHA_LALWANI)
   @Category(UnitTests.class)
-  public void testFilter() {
+  public void testFilterOnDowntime() {
     Instant startTime = clock.instant();
     List<SLIState> sliStates = Arrays.asList(BAD, GOOD, SKIP_DATA, NO_DATA, GOOD, GOOD, BAD, BAD, BAD, SKIP_DATA);
     List<SLIRecordParam> sliRecordParams = getSLIRecordParam(startTime, sliStates);
     EntityUnavailabilityStatusesDTO downtimeEntityUnavailabilityStatusesDTO =
         builderFactory.getDowntimeEntityUnavailabilityStatusesDTO();
-    EntityUnavailabilityStatusesDTO sloEntityUnavailabilityStatusesDTO =
-        builderFactory.getSLOEntityUnavailabilityStatusesDTO();
-    List<EntityUnavailabilityStatusesDTO> statusesDTOS =
-        List.of(downtimeEntityUnavailabilityStatusesDTO, sloEntityUnavailabilityStatusesDTO);
-    doReturn(statusesDTOS).when(entityUnavailabilityStatusesService).getAllInstances(any(), any(), any());
+    doReturn(Collections.singletonList(downtimeEntityUnavailabilityStatusesDTO))
+        .when(entityUnavailabilityStatusesService)
+        .getAllInstances(any(), any(), any());
     doReturn(Collections.singletonList(downtimeEntityUnavailabilityStatusesDTO))
         .when(downtimeService)
         .filterDowntimeInstancesOnMonitoredService(any(), any(), any());
+    List<SLIRecordParam> updatedSliRecordParams =
+        sliDataUnavailabilityFilterService.filterSLIRecordsToSkip(sliRecordParams, builderFactory.getProjectParams(),
+            startTime, startTime.plus(10, ChronoUnit.MINUTES), "msIdentifier", "sliId");
+    assertThat(updatedSliRecordParams.size()).isEqualTo(10);
+    assertThat(updatedSliRecordParams.get(9).getSliState()).isEqualTo(SKIP_DATA);
+    assertThat(updatedSliRecordParams.get(8).getSliState()).isEqualTo(SKIP_DATA);
+  }
+
+  @Test
+  @Owner(developers = VARSHA_LALWANI)
+  @Category(UnitTests.class)
+  public void testFilterOnDCFailureInstances() {
+    Instant startTime = clock.instant();
+    List<SLIState> sliStates = Arrays.asList(BAD, GOOD, SKIP_DATA, NO_DATA, GOOD, GOOD, BAD, BAD, BAD, SKIP_DATA);
+    List<SLIRecordParam> sliRecordParams = getSLIRecordParam(startTime, sliStates);
+    EntityUnavailabilityStatusesDTO sloEntityUnavailabilityStatusesDTO =
+        builderFactory.getSLOEntityUnavailabilityStatusesDTO();
+    doReturn(Collections.singletonList(sloEntityUnavailabilityStatusesDTO))
+        .when(entityUnavailabilityStatusesService)
+        .getAllInstances(builderFactory.getProjectParams(), startTime.getEpochSecond(),
+            startTime.plus(10, ChronoUnit.MINUTES).getEpochSecond());
     List<SLIRecordParam> updatedSliRecordParams = sliDataUnavailabilityFilterService.filterSLIRecordsToSkip(
         sliRecordParams, builderFactory.getProjectParams(), startTime, startTime.plus(10, ChronoUnit.MINUTES),
         "msIdentifier", sloEntityUnavailabilityStatusesDTO.getEntityId());
